Edited:Innovation Page

--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -11,6 +11,7 @@ block content
         ol.carousel-indicators
           li.active(data-target='#carouselInnovation', data-slide-to='0')
           li(data-target='#carouselInnovation', data-slide-to='1')
+          li(data-target='#carouselInnovation', data-slide-to='2')
         .carousel-inner
           .carousel-item.active
             img.img-fluid.img-desktop(src='./images/innovation-cc.png', alt='First slide')
@@ -23,6 +24,11 @@ block content
             img.img-fluid.img-mobile(src='./images/innovation-kimaya-mobile.png', alt='Second slide')
             .info-wrap
                 p.title Kimaya-TPN is a cutting-edge, pilot-tested application, built with the aim of making nutritional calculations fully automated, error free and fast. Kimaya-TPN is being used by KEM-NICU & alike, to do calculations using the Hyperalimentation Worksheet for preparing TPN
+          .carousel-item
+            img.img-fluid.img-desktop(src='./images/innovation-hunger.png', alt='Second slide')
+            img.img-fluid.img-mobile(src='./images/innovation-hunger-mobile.png', alt='Second slide')
+            .info-wrap
+                p.title Hunger Terminal is an application developed in order to reduce scrub food wastage where company caters food for its employees.
       .btn-wrap
         a.btn.btn-gray(href="open-source.html") Open Source
         a.btn.btn-outline-gray(href="services.html") Services
