--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -29,6 +29,13 @@ block content
             img.img-fluid.img-mobile(src='./images/innovation-hunger-mobile.png', alt='Second slide')
             .info-wrap
                 p.title Hunger Terminal is an application developed in order to reduce scrub food wastage where company caters food for its employees.
+        a.carousel-control-prev(href='#carouselExampleControls', role='button', data-slide='prev')
+          span.carousel-control-prev-icon(aria-hidden='true')
+          span.sr-only Previous
+        a.carousel-control-next(href='#carouselExampleControls', role='button', data-slide='next')
+          span.carousel-control-next-icon(aria-hidden='true')
+          span.sr-only Next
+
       .btn-wrap
         a.btn.btn-gray(href="open-source.html") Open Source
         a.btn.btn-outline-gray(href="services.html") Services
