--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -13,6 +13,7 @@ html(lang="en")
       title Technology Expert Solution Providers in India | Josh Software Private Limited
       link(rel='stylesheet', href="styles/main.css")
       link(href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700', rel='stylesheet')
+      script(src='https://www.google.com/recaptcha/api.js', async='', defer='')
       //[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]
   body
     block header
