Edited:Index Page

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -43,43 +43,43 @@ block content
             a(href="javascript:void(0);")
               img.img-fluid(src="./images/clogo-gojek.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="http://www.dealsignal.com/",target="_blank")
               img.img-fluid(src="./images/clogo-dealsignal.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="http://brandscope.com.au/",target="_blank")
               img.img-fluid(src="./images/clogo-brandscope.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="http://www.clubbuzz.co.uk/",target="_blank")
               img.img-fluid(src="./images/clogo-clubbuzz.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="https://www.cubictree.com/",target="_blank")
               img.img-fluid(src="./images/clogo-cubictree.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="https://www.willswayfoundation.us/",target="_blank")
               img.img-fluid(src="./images/clogo-we3.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="https://thepediatricnetwork.com/#/",target="_blank")
               img.img-fluid(src="./images/clogo-tpn.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="http://www.freedomfromdiabetes.org/Program",target="_blank")
               img.img-fluid(src="./images/clogo-ffd.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="http://www.synergydesignsolutions.com.sg/",target="_blank")
               img.img-fluid(src="./images/clogo-synergy.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="https://next.merchdirect.com/",target="_blank")
               img.img-fluid(src="./images/clogo-mdny.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="https://fundamentor.com/",target="_blank")
               img.img-fluid(src="./images/clogo-fundamentor.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="http://www.skoutdeals.com/",target="_blank")
               img.img-fluid(src="./images/clogo-skoutdeals.jpg", alt="")
           li
             a(href="javascript:void(0);")
               img.img-fluid(src="./images/clogo-druva.jpg", alt="")
           li
-            a(href="javascript:void(0);")
+            a(href="https://quickinsure.co.in/",target="_blank")
               img.img-fluid(src="./images/clogo-quickinsure.jpg", alt="")
 
         .link-box
