--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -16,14 +16,15 @@ header.josh-header.fixed-top
           a.nav-item.nav-link(href='technologies.html', class= (page === "Technologies") ? "active" : "") Technologies
           a.nav-item.nav-link(href='industries.html', class= (page === "Industries") ? "active" : "") Industries
           .dropdown
-            a.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', class= (page === "About Us" || page === "Open Source" || page === "News" || page === "Our Team" || page === "Career" || page === "Contact Us") ? "active" : "") Company
+            a.nav-item.nav-link.dropdown-toggle(href='javascript:void(0);', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', class= (page === "About Us" || page === "Open Source" || page === "News" || page === "Our Team" || page === "Career" || page === "Contact Us" || page === "Testimonials") ? "active" : "") Company
             .dropdown-menu(aria-labelledby='dropdownMenuLink')
               a.dropdown-item(href='about-us.html', class= (page === "About Us") ? "active" : "") About Us
               a.dropdown-item(href='open-source.html', class= (page === "Open Source") ? "active" : "") Open Source
               a.dropdown-item(href='about-us.html#news') News
               a.dropdown-item(href='team.html', class= (page === "Our Team") ? "active" : "") Our Team
+              a.dropdown-item(href='testimonial.html', class= (page === "Testimonials") ? "active" : "") Testimonials
               a.dropdown-item(href='career.html', class= (page === "Career") ? "active" : "") Career
               a.dropdown-item(href='contact-us.html', class= (page === "Contact Us") ? "active" : "") Contact Us
               a.dropdown-item(href='https://blog.joshsoftware.com/', target="_blank") Blog
-          a.nav-item.nav-link.nav-offcanvas-link(href='contact-us.html', class= (page === "Contact Us") ? "active" : "")) Contact Us
+          a.nav-item.nav-link.nav-offcanvas-link(href='contact-us.html', class= (page === "Contact Us") ? "active" : "") Contact Us
           a.nav-item.nav-link.nav-offcanvas-link(href='https://blog.joshsoftware.com/', target="_blank") Blog
