--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -7,7 +7,7 @@ block content
   section.section-innovation.section-content
     .container
       h1.display-4 Innovation
-      #carouselInnovation.carousel.slide(data-ride='carousel')
+      #carouselInnovation.carousel.slide(data-ride='carousel', data-interval='2500')
         ol.carousel-indicators
           li.active(data-target='#carouselInnovation', data-slide-to='0')
           li(data-target='#carouselInnovation', data-slide-to='1')
@@ -17,18 +17,18 @@ block content
             img.img-fluid.img-desktop(src='./images/innovation-cc.png', alt='First slide')
             img.img-fluid.img-mobile(src='./images/innovation-cc-mobile.png', alt='First slide')
             .info-wrap
-                p.title CodeCuriosity is a platform that encourages contributions to open source. Everyone is rewarded for their efforts, no matter how big or small they are. Our aim is to make open source contribution a habit!
-                p.title We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
+                p CodeCuriosity is a platform that encourages contributions to open source. Everyone is rewarded for their efforts, no matter how big or small they are. Our aim is to make open source contribution a habit!
+                p We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
           .carousel-item
             img.img-fluid.img-desktop(src='./images/innovation-kimaya.png', alt='Second slide')
             img.img-fluid.img-mobile(src='./images/innovation-kimaya-mobile.png', alt='Second slide')
             .info-wrap
-                p.title Kimaya-TPN is a cutting-edge, pilot-tested application, built with the aim of making nutritional calculations fully automated, error free and fast. Kimaya-TPN is being used by KEM-NICU & alike, to do calculations using the Hyperalimentation Worksheet for preparing TPN
+                p Kimaya-TPN is a cutting-edge, pilot-tested application, built with the aim of making nutritional calculations fully automated, error free and fast. Kimaya-TPN is being used by KEM-NICU & alike, to do calculations using the Hyperalimentation Worksheet for preparing TPN
           .carousel-item
             img.img-fluid.img-desktop(src='./images/innovation-hunger.png', alt='Second slide')
             img.img-fluid.img-mobile(src='./images/innovation-hunger-mobile.png', alt='Second slide')
             .info-wrap
-                p.title Hunger Terminal is an application developed in order to reduce scrub food wastage where company caters food for its employees.
+                p Hunger Terminal is an application developed in order to reduce scrub food wastage where company caters food for its employees.
         a.carousel-control-prev(href='#carouselExampleControls', role='button', data-slide='prev')
           span.carousel-control-prev-icon(aria-hidden='true')
           span.sr-only Previous
