Edited: Few changes in career scss

--- a/src/styles/pages/_career.scss
+++ b/src/styles/pages/_career.scss
@@ -28,7 +28,7 @@
   text-align: center;
   color: #fff;
   position: absolute;
-  bottom: 80px;
+  bottom: rem(40px);
   padding: 0;
   width: 60%;
   left:-10%;
