--- a/src/styles/pages/_services.scss
+++ b/src/styles/pages/_services.scss
@@ -2,14 +2,16 @@
 
   &.section-banner{
     background-color: #62AAAC;
-    min-height: rem(825px);
+    min-height: calc(100vh - 76px);
     position: relative;
+    padding: rem(100px 0 75px);
+
     @include media-breakpoint-down(md){
-      min-height: rem(430px);
+      min-height: unset;
     }
 
     @include media-breakpoint-down(sm){
-      min-height: rem(360px);
+      min-height: unset;
     }
 
     h1{
@@ -17,8 +19,7 @@
       text-align: center;
       color: $white;
       font-weight: 300;
-      padding: rem(70px) 0 0;
-      margin: 0 0 rem(70px);
+      margin: 0 0 rem(50px);
     }
 
     .para{
@@ -32,6 +33,25 @@
         line-height: rem(19px);
         margin: 0;
       }
+    }
+  }
+
+  .img-wrap {
+    position: relative;
+  }
+
+  .img-content {
+    position: absolute;
+    
+    p{
+      color: $white;
+      text-align: center;
+      margin: 0;  
+    }
+
+    &.-gear1{
+      top: rem(210px);
+      left: rem(90px);
     }
   }
 
