--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -7,7 +7,12 @@ block content
   section#servicesTop.section-services.section-banner
     .container
       h1 What We Do?
-      img.img-fluid(src="./images/services-gear.png", alt="IOT-Logo")
+      .img-wrap
+        img.img-fluid(src="./images/services-gear.png", alt="IOT-Logo")
+        .img-content.-gear1
+          p Simplify <br>Domain <br>Complexities
+        .img-content.-gear2
+          p Accelerate <br>Time to Market 
       p.para We help our clients to build pixel perfect and high-performance tech solutions, that lead to building teams and collaborate further to meet the goals. The aim is to help them disrupt their industries today and lead them into the future. 
       a.scroll-down.text-white(href="javascript:void(0);")
         i.icon-angle-double-down
