--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -82,3 +82,9 @@ block content
       .btn-wrap
         a.btn.btn-gray(href="team.html") Our Team
         a.btn.btn-outline-gray(href="career.html") Career
+
+block append scripts
+  script.
+    $('html, body').animate({
+      scrollTop: $('#openSource').offset().top
+    }, 'slow');
