Edited:Innovation Page

--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -29,10 +29,10 @@ block content
             img.img-fluid.img-mobile(src='./images/innovation-hunger-mobile.png', alt='Second slide')
             .info-wrap
                 p Hunger Terminal is an application developed in order to reduce scrub food wastage where company caters food for its employees.
-        a.carousel-control-prev(href='#carouselExampleControls', role='button', data-slide='prev')
+        a.carousel-control-prev(href='#carouselInnovation', role='button', data-slide='prev')
           span.carousel-control-prev-icon(aria-hidden='true')
           span.sr-only Previous
-        a.carousel-control-next(href='#carouselExampleControls', role='button', data-slide='next')
+        a.carousel-control-next(href='#carouselInnovation', role='button', data-slide='next')
           span.carousel-control-next-icon(aria-hidden='true')
           span.sr-only Next
 
