--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -23,7 +23,7 @@ html(lang="en")
       h1 Identity
 
     block footer
-      include ./../inc/footer.jade
+      include ./../inc/footer-home.jade
 
     block scripts
       script(src='scripts/vendors.min.js')
