--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -7,12 +7,92 @@ block content
   section#servicesTop.section-services.section-banner
     .container
       h1 What We Do?
-      .img-wrap
-        img.img-fluid(src="./images/services-gear.png", alt="IOT-Logo")
-        .img-content.-gear1
-          p Simplify <br>Domain <br>Complexities
-        .img-content.-gear2
-          p Accelerate <br>Time to Market 
+      svg.services-banner-svg(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 1245 546')
+        defs
+          style.
+            .cls-1 {
+            fill: url(#pattern);
+            }
+          pattern#pattern(preserveaspectratio='none', width='100%', height='100%', viewbox='0 0 1891 830')
+            image(width='1891', height='830', xlink:href='./images/services-banner-image.png')
+        g#Group_942(data-name='Group 942', transform='translate(-93 -274)')
+          rect#services-gear.cls-1(width='1245', height='546', transform='translate(93 274)')
+          g#gear6.gear
+            circle#Ellipse_68.bg-circle(data-name='Ellipse 68', cx='85', cy='85', r='85', transform='translate(1100 582)')
+            text#Rescue_Missions.title(data-name='Rescue \
+            Missions', transform='translate(1189.969 664.217)')
+              tspan(x='-42.522', y='0') Rescue 
+              tspan(x='-49.056', y='29') Missions
+            text#Your_latest_trip.description(data-name='Your latest trip', transform='translate(1113.241 619.97)')
+              tspan(x='5.66', y='14') Re-engineer existing 
+              tspan(x='39.708', y='34') inefficient 
+              tspan(x='12.933', y='54') architectures with 
+              tspan(x='7.865', y='74') zero down-time and 
+              tspan(x='26.758', y='94') complete data 
+          g#gear5.gear
+            circle#Ellipse_66.bg-circle(data-name='Ellipse 66', cx='85', cy='85', r='85', transform='translate(950 375)')
+            text#IP_Multiplier.title(data-name='IP\
+            Multiplier', transform='translate(1037.484 453.726)')
+              tspan(x='-11.556', y='0') IP
+              tspan(x='-56.328', y='29') Multiplier
+            text#Your_latest_trip-2.description(data-name='Your latest trip', transform='translate(960.757 416.479)')
+              tspan(x='25.753', y='14') Build brand and 
+              tspan(x='21.161', y='34') business value to 
+              tspan(x='11.725', y='54') develop proprietary 
+              tspan(x='9.198', y='74') intellectual property 
+              tspan(x='55.496', y='94') assets.
+          g#gear4.gear
+            circle#Ellipse_67.bg-circle(data-name='Ellipse 67', cx='85', cy='85', r='85', transform='translate(724 495)')
+            text#Scalable_Architecture.title(data-name='Scalable \
+            Architecture', transform='translate(813.116 571.437)')
+              tspan(x='-49.104', y='0') Scalable 
+              tspan(x='-71.952', y='29') Architecture
+            text#Your_latest_trip-3.description(data-name='Your latest trip', transform='translate(736.389 537.189)')
+              tspan(x='8.255', y='14') Enable our solutions 
+              tspan(x='9.424', y='34') to sustain, grow and 
+              tspan(x='6.68', y='54') consistently perform 
+              tspan(x='7.562', y='74') at large scale of data 
+              tspan(x='24.516', y='94') and consumers.
+          g#gear3.gear
+            circle#Ellipse_65.bg-circle(data-name='Ellipse 65', cx='85', cy='85', r='85', transform='translate(522 338)')
+            text#Agile_Processes.title(data-name='Agile\
+            Processes', transform='translate(610.419 416.157)')
+              tspan(x='-28.8', y='0') Agile
+              tspan(x='-55.812', y='29') Processes
+            text#Your_latest_trip-4.description(data-name='Your latest trip', transform='translate(534.692 378.91)')
+              tspan(x='32.159', y='14') Follow AGILE 
+              tspan(x='11.922', y='34') processes for rapid, 
+              tspan(x='1.555', y='54') high quality and timely 
+              tspan(x='23.528', y='74') delivery with no 
+              tspan(x='44.626', y='94') surprises.
+          g#gear2.gear
+            circle#Ellipse_64.bg-circle(data-name='Ellipse 64', cx='85', cy='85', r='85', transform='translate(397 561)')
+            text#Accelerate_Time_to_Market_.title(data-name='Accelerate \
+            Time to Market ', transform='translate(484.913 640.601)')
+              tspan(x='-58.036', y='0') Accelerate 
+              tspan(x='-81.598', y='27') Time to Market 
+            text#Your_latest_trip-5.description(data-name='Your latest trip', transform='translate(411.187 602.354)')
+              tspan(x='0.446', y='14') Ensure swift ‘Concept 
+              tspan(x='8.062', y='34') to Code’ delivery to 
+              tspan(x='13.494', y='54') ensure our clients 
+              tspan(x='40.206', y='74') beat their 
+              tspan(x='24.078', y='94') competition to 
+              tspan(x='47.584', y='114') market.
+          g#gear1.gear
+            circle#Ellipse_63.bg-circle(data-name='Ellipse 63', cx='85', cy='85', r='85', transform='translate(159 468)')
+            text#Simplify_Domain_Complexities.title(data-name='Simplify \
+            Domain \
+            Complexities', transform='translate(244.319 528.32)')
+              tspan(x='-44.286', y='0') Simplify 
+              tspan(x='-42.438', y='27') Domain 
+              tspan(x='-67.392', y='54') Complexities
+            text#Your_latest_trip-6.description(data-name='Your latest trip', transform='translate(176.592 505.074)')
+              tspan(x='0.759', y='14') Focus on simplifying 
+              tspan(x='5.12', y='34') complexities in our 
+              tspan(x='14.682', y='54') clients’ industry 
+              tspan(x='5.547', y='74') through intelligent 
+              tspan(x='23.355', y='94') technological 
+              tspan(x='24.734', y='114') intervention.
       p.para We help our clients to build pixel perfect and high-performance tech solutions, that lead to building teams and collaborate further to meet the goals. The aim is to help them disrupt their industries today and lead them into the future. 
       a.scroll-down.text-white(href="javascript:void(0);")
         i.icon-angle-double-down
