--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -24,7 +24,7 @@ header.josh-header.fixed-top
               a.dropdown-item(href='team.html', class= (page === "Our Team") ? "active" : "") Our Team
               a.dropdown-item(href='testimonial.html', class= (page === "Testimonials") ? "active" : "") Testimonials
               a.dropdown-item(href='career.html', class= (page === "Career") ? "active" : "") Career
-              a.dropdown-item(href='contact-us.html', class= (page === "Contact Us") ? "active" : "") Contact Us
-              a.dropdown-item(href='https://blog.joshsoftware.com/', target="_blank") Blog
+              a.dropdown-item.d-none.d-lg-block(href='contact-us.html', class= (page === "Contact Us") ? "active" : "") Contact Us
+              a.dropdown-item.d-none.d-lg-block(href='https://blog.joshsoftware.com/', target="_blank") Blog
           a.nav-item.nav-link.nav-offcanvas-link(href='contact-us.html', class= (page === "Contact Us") ? "active" : "") Contact Us
           a.nav-item.nav-link.nav-offcanvas-link(href='https://blog.joshsoftware.com/', target="_blank") Blog
