Added: Services section mobile image and other ui fixes

--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -93,6 +93,65 @@ block content
               tspan(x='5.547', y='74') through intelligent 
               tspan(x='23.355', y='94') technological 
               tspan(x='24.734', y='114') intervention.
+
+      svg.services-banner-svg-sm(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 471.626 1021')
+        g#services-gear-mobile(transform='translate(-486 -2011)')
+          image#services-gear-sm(width='471', height='1021', transform='translate(486 2011)', xlink:href='./images/services-gear-sm.png')
+          g#gear-sm-6
+            text#Rescue_Missions.title(data-name='Rescue Missions', transform='translate(572.704 2864.404)')
+              tspan(x='23.041', y='18') Rescue 
+              tspan(x='16.187', y='40') Missions
+            text#Your_latest_trip.description(data-name='Your latest trip', transform='translate(501.57 2994.188)')
+              tspan(x='10.802', y='12') Re-engineer existing inefficient architectures 
+              tspan(x='1.286', y='26') with zero down-time and complete data integrity
+          g#gear-sm-5
+            text#IP_Multiplier.title(data-name='IP\
+            Multiplier', transform='translate(737.332 2747.116)')
+              tspan(x='44.312', y='18') IP
+              tspan(x='10.733', y='40') Multiplier
+            text#Your_latest_trip-2.description(data-name='Your latest trip', transform='translate(801.197 2879.188)')
+              tspan(x='4.982', y='12') Build brand and business 
+              tspan(x='28.601', y='26') value to develop 
+              tspan(x='9.371', y='40') proprietary intellectual 
+              tspan(x='29.219', y='54') property assets.
+          g#gear-sm-4
+            text#Scalable_Architecture.title(data-name='Scalable Architecture', transform='translate(642.32 2571.775)')
+              tspan(x='18.104', y='18') Scalable 
+              tspan(x='4.042', y='40') Architectur
+            text#Your_latest_trip-3.description(data-name='Your latest trip', transform='translate(490.756 2676.988)')
+              tspan(x='19.959', y='12') Enable our solutions to 
+              tspan(x='0.567', y='26') sustain, grow and consistently 
+              tspan(x='2.814', y='40') perform at large scale of data 
+              tspan(x='40.83', y='54') and consumers.
+          g#gear-sm-3
+            text#Agile_Processes.title(data-name='Agile\
+            Processes', transform='translate(765.902 2412.736)')
+              tspan(x='31.379', y='18') Agile
+              tspan(x='11.12', y='40') Processes
+            text#Your_latest_trip-4.description(data-name='Your latest trip', transform='translate(797.626 2281.378)')
+              tspan(x='3.461', y='12') Follow AGILE processes for 
+              tspan(x='0.257', y='26') rapid, high quality and timely 
+              tspan(x='7.079', y='40') delivery with no surprises.
+          g#gear-sm-2
+            text#Accelerate_Time_to_Market_.title(data-name='Accelerate Time to Market ', transform='translate(586.502 2310.032)')
+              tspan(x='7.448', y='18') Accelerate 
+              tspan(x='21.164', y='40') Time to 
+            text#Your_latest_trip-5.description(data-name='Your latest trip', transform='translate(494.368 2438.816)')
+              tspan(x='16.241', y='12') Ensure swift ‘Concept to 
+              tspan(x='5.957', y='26') Code’ delivery to ensure our 
+              tspan(x='2.735', y='40') clients beat their competition 
+              tspan(x='56.144', y='54') to market.
+          g#gear-sm-1
+            text#Simplify_Domain_Complexities.title(data-name='Simplify Domain Complexities', transform='translate(657.4 2108.875)')
+              tspan(x='23.198', y='18') Simplify 
+              tspan(x='24.71', y='40') Domain 
+              tspan(x='2.341', y='62') Complexities
+            text#Your_latest_trip-6.description(data-name='Your latest trip', transform='translate(487.266 2022.659)')
+              tspan(x='0.821', y='12') Focus on simplifying complexities in 
+              tspan(x='20.471', y='26') our clients’ industry through 
+              tspan(x='32.666', y='40') intelligent technological 
+              tspan(x='63.524', y='54') intervention.
+
       p.para We help our clients to build pixel perfect and high-performance tech solutions, that lead to building teams and collaborate further to meet the goals. The aim is to help them disrupt their industries today and lead them into the future. 
       a.scroll-down.text-white(href="javascript:void(0);")
         i.icon-angle-double-down
