--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -77,3 +77,24 @@ block content
                 i.icon-mail
                 a.font-weight-light(href="mailto:info@joshsoftware.com") info@joshsoftware.com
       p.txt-display And <br>Disrupt Your Industry
+
+block append scripts
+  script.
+    $('#contact-form').on('submit', function (event) {
+      var params = {};
+      params.name = $('#input-fname').val();
+      params.email = $('#inputEmail').val();
+      params.organization = $('#input-organization').val();
+      params.job_title = $('#inputcompany').val();
+      params.role = $('#exampleFormControlSelect1').val();
+      params.message = $('#exampleFormControlTextarea1').val();
+      params.phone = $('#inputnumber').val();
+      $.post('http://intranet.joshsoftware.com/api/v1/contact_us.json', {contact_us: params, 'g-recaptcha-response': grecaptcha.getResponse}, function(result, status) {
+        let form = $('.form-contact');
+        form[0].reset();
+        alert("Thanks for contacting us! We will get back to you soon!");
+      }).fail(function(result){
+        alert(result.responseJSON.errors);
+      });
+      event.preventDefault();
+    });
