--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -31,5 +31,13 @@ html(lang="en")
       script.
         skrollr.init({
           smoothScrolling: true,
-          //mobileDeceleration: 0.004
         });
+        // initialize skrollr if the window width is large enough
+        if $(window).width() < 991.98
+          skrollr.init().destroy()
+        // disable skrollr if the window is resized below 768px wide
+        $(window).on 'resize', ->
+          if $(window).width() <= 991.98
+            skrollr.init().destroy()
+          return
+        return
